v0.3.3 (2012-07-03)
	-- do not try to free the empty x264/vpx buffers after a decompression failure
	-- fix missing "damage-sequence" packet for sequence zero
	-- prevent large clipboard packets from causing the connection to drop, and ensure they are compressed
	-- fix for connection with older clients and server without raw packet support and rgb24 encoding
	-- non-US keyboard layout fix
	-- correctly calculate min_match_delay shown in statistics via "xpra info"
	-- require x264-libs for x264 support on Fedora


* Mon Jun 06 2012 Antoine Martin <antoine@nagafix.co.uk> 0.3.2-1
v0.3.2 (2012-06-04)
======================
	-- fix missing 'a' key using OS X clients
	-- fix debian packaging for xpra_launcher
	-- fix unicode decoding problems in window title
	-- fix latency issue


v0.3.1 (2012-05-29)
======================
	-- fix DoS in network connections setup code
	-- fix for non-ascii characters in source file
	-- log remote IP or socket address
	-- more graceful disconnection of invalid clients
	-- updates to the man page and xpra command help page
	-- support running the automated tests against older versions
	-- "xpra info" to report the number of clients connected
	-- use xpra's own icon for its own windows (about and info dialogs)


v0.3.0 (2012-05-20)
======================
	-- zero-copy network code, per packet compression
	-- fix race causing DoS in threaded network protocol setup
	-- fix vpx encoder memory leak
	-- fix vpx/x264 decoding: recover from frame failures
	-- fix small per-window memory leak in server
	-- per-window update batching auto-tuning, which is fairer
	-- windows update batching now takes into account the number of pixels rather than just the number of regions to update
	-- support --socket-dir option over ssh
	-- IPv6 support using the syntax: ssh/::ffff:192.168.1.100/10 or tcp/::ffff:192.168.1.100/10000
	-- all commands now return a non-zero exit code in case of failure
	-- new "xpra info" command to report server statistics